@@ -1,3 +1,10 @@
+2000-04-12  Eli Zaretskii  <eliz@is.elta.co.il>
+
+	* top.c (gdb_completer_file_name_break_characters): New variable.
+	(line_completion_function): When completing on file names, use
+	gdb_completer_file_name_break_characters as word break
+	characters for the readline library.
+
 2000-04-12  Mark Kettenis  <kettenis@gnu.org>
 
 	* i387-tdep.c (print_i387_value): Avoid call to
